--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -1,6 +1,7 @@
-<h3>Distribution of Ticks</h3>
-
-<div id="map" style='width: 100%; height: 400px;'>
-
-<%= render 'map', tick: @tick %>
+<div class="container">
+  <h3>Distribution of Ticks</h3>
+  
+  <div class="row" id="map" style='width: 100%; height: 400px;'>
+  <%= render 'map', tick: @tick %>
+  </div>
 </div>
