--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,56 @@
-<div class="container center-align">
-    <h1>Welcome to Ticked</h1>
-  <img src="https://image.ibb.co/hiRvfk/cow.png" style="width:304px;height:228px;">
+<div id="index-banner" class="parallax-container">
+  <div class="section no-pad-bot">
+    <div class="container">
+      <br><br>
+      <h1 class="header big-header center teal-text text-lighten-5">TICKED.</h1>
+      <div class="row center">
+        <h5 class="col s12 teal-text text-lighten-5">A pokedex for Ticks</h5>
+      </div>
+      <div class="row center">
+        <a href='/ticks' class="btn-large waves-effect waves-light teal lighten-1 rounded-corner">View Ticks</a>
+      </div>
+      <br><br>
+  </div>
+  </div>
+  <div class="parallax" id="about"></div>
+</div>
+
+<div class="container">
+
+
+  <div class="section">
+
+    <!--   Icon Section   -->
+    <div class="row">
+      <div class="col s12 m4 l4">
+        <div class="icon-block">
+          <h2 class="center brown-text"><i class="material-icons">info_outline</i></h2>
+          <h5 class="center">Information</h5>
+
+          <p class="light justify">Researchers and Farm-Owners could look up the Tick listing to gather more information about the different Tick species. Users would also be able to look at the current distribution of Ticks through the map to understad the distrbution pattern of different Ticks.</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4 l4">
+        <div class="icon-block">
+          <h2 class="center brown-text"><i class="material-icons">group</i></h2>
+          <h5 class="center">User Interaction</h5>
+
+          <p class="light justify">Users could exchange information on ticks through the forum and discuss related topics. This will enable Farm-Owners to have an open dicussion regarding new findings while contributing to the development of the livestock industry.</p>
+        </div>
+      </div>
+
+      <div class="col s12 m4 l4">
+        <div class="icon-block">
+          <h2 class="center brown-text"><i class="material-icons">my_location</i></h2>
+          <h5 class="center">Report Sighting</h5>
+
+          <p class="light justify">Researchers and Farm-Owners would be able to report sightings of ticks throughout the world which will then be veried by the admin before it is added into the distribution map.</p>
+        </div>
+      </div>
+    </div>
+
+  </div>
+
+
 </div>
