--- a/app/views/ticks/show.html.erb
+++ b/app/views/ticks/show.html.erb
@@ -1,64 +1,67 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<p>
-  <% @tick.tick_image.each do |image| %>
-    <img src="<%= image.url %>">
+  <p id="notice"><%= notice %></p>
+
+  <p>
+    <% @tick.tick_image.each do |image| %>
+      <img src="<%= image.url %>">
+    <% end %>
+  </p>
+
+  <p>
+    <strong>Common name:</strong>
+    <%= @tick.common_name %>
+  </p>
+
+  <p>
+    <strong>Scientific name:</strong>
+    <%= @tick.scientific_name %>
+  </p>
+
+  <p>
+    <strong>Host species:</strong>
+    <%= @tick.host_species %>
+  </p>
+
+  <p>
+    <strong>Common parasites:</strong>
+    <%= @tick.common_parasites %>
+  </p>
+
+  <p>
+    <strong>Pathogenic effect:</strong>
+    <%= @tick.pathogenic_effect %>
+  </p>
+
+  <p>
+    <strong>Morphology:</strong>
+    <%= @tick.morphology %>
+  </p>
+
+  <p>
+    <strong>Description:</strong>
+    <%= @tick.description %>
+  </p>
+
+  <p>
+    <strong>Control measures:</strong>
+    <%= @tick.control_measures %>
+  </p>
+
+  <p>
+    <strong>Latitude:</strong>
+    <%= @tick.latitude %>
+  </p>
+
+  <p>
+    <strong>Longtitude:</strong>
+    <%= @tick.longtitude %>
+  </p>
+
+  <%= link_to 'Back', ticks_path %>
+
+  <!-- only show if current user is admin -->
+  <% if current_user.admin? %>
+  | <%= link_to 'Edit', edit_tick_path(@tick) %>
   <% end %>
-</p>
-
-<p>
-  <strong>Common name:</strong>
-  <%= @tick.common_name %>
-</p>
-
-<p>
-  <strong>Scientific name:</strong>
-  <%= @tick.scientific_name %>
-</p>
-
-<p>
-  <strong>Host species:</strong>
-  <%= @tick.host_species %>
-</p>
-
-<p>
-  <strong>Common parasites:</strong>
-  <%= @tick.common_parasites %>
-</p>
-
-<p>
-  <strong>Pathogenic effect:</strong>
-  <%= @tick.pathogenic_effect %>
-</p>
-
-<p>
-  <strong>Morphology:</strong>
-  <%= @tick.morphology %>
-</p>
-
-<p>
-  <strong>Description:</strong>
-  <%= @tick.description %>
-</p>
-
-<p>
-  <strong>Control measures:</strong>
-  <%= @tick.control_measures %>
-</p>
-
-<p>
-  <strong>Latitude:</strong>
-  <%= @tick.latitude %>
-</p>
-
-<p>
-  <strong>Longtitude:</strong>
-  <%= @tick.longtitude %>
-</p>
-
-<%= link_to 'Back', ticks_path %>
-
-<!-- only show if current user is admin -->
-<% if current_user.admin? %>
-| <%= link_to 'Edit', edit_tick_path(@tick) %>
-<% end %>
+</div>
