--- a/app/views/contact/index.html.erb
+++ b/app/views/contact/index.html.erb
@@ -1,18 +1,29 @@
-<div class="col-md-6">
 
-  <% if flash[:notice] %>
-      <div class="notice"><%= flash[:notice] %></div>
-    <% elsif flash[:warning] %>
-      <div class="alert alert-danger"><%= flash[:warning] %></div>
-    <% else %>
-  <% end %>
+<div class="row">
+<div class="col s12 m12 l12">
 
-<h3>Contact Us</h3>
 
-<%= simple_form_for :contact do |f| %>
-    <%= f.input :email, placeholder: 'type email here' %>
-    <%= f.input :message, placeholder: 'type message here', :as => :text %>
-    <%= f.button :submit, "Send" %>
-<% end %>
+    <% if flash[:notice] %>
+        <div class="notice"><%= flash[:notice] %></div>
+      <% elsif flash[:warning] %>
+        <div class="alert alert-danger"><%= flash[:warning] %></div>
+      <% else %>
+    <% end %>
+  </div>
+    </div>
 
-</div>
+    <div class="row">
+      <div class="col s12 m12 l12">
+
+
+    <h3>Contact Us</h3>
+
+
+      <%= simple_form_for :contact do |f| %>
+          <%= f.input :email, placeholder: 'type email here' %>
+          <%= f.input :message, placeholder: 'type message here', :as => :text %>
+          <%= f.button :submit, "Send" %>
+      <% end %>
+
+    </div>
+  </div>
