--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,49 +1,44 @@
-
-<div class="capitalize">
-
-  <% @conversations.each do |conversation| %>
-  <% if conversation.sender_id == current_user.id %>
-  <% recipient = User.find(conversation.recipient_id) %>
-<% else conversation.recipient_id == current_user.id %>
-  <% recipient = User.find(conversation.sender_id) %>
-  <%= recipient.username %>
-  <% end %>
-  <% end %>
-</div>
-
-<div class="divider"></div>
-
-<% if @over_five %>
-<%= link_to 'Show Previous', '?m=all' %>
-<% end %>
-<div class="ui segment capitalize">
-  <% @messages.each do |message| %>
-  <% if message.body %>
-  <% user = User.find(message.user_id) %>
-  <div class="item">
-    <div class="content">
-      <div class="header">
-        <strong><%= user.username %></strong>
-      </div>
-      <div class="timestamp"><%= message.message_time %></div>
-      <div class="list">
-        <div class="item">
-          <i class="right triangle icon"></i>
-          <%= message.body %>
-        </div>
-      </div>
+<div class="container">
+  <div class="row top-margin">
+    <div class="capitalize center">
+    <% @conversations.each do |conversation| %>
+    <% if conversation.sender_id == current_user.id %>
+    <% recipient = User.find(conversation.recipient_id) %>
+  <% else conversation.recipient_id == current_user.id %>
+    <% recipient = User.find(conversation.sender_id) %>
+    <h5><%= recipient.username %><h5>
+    <% end %>
+    <% end %>
     </div>
   </div>
-  <% end %>
-  <% end %>
 </div>
 
-<%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
-<div class="field">
-  <%= f.text_area :body, class: "form-control" %>
+
+<div class="container">
+  <div class="row chat-box">
+    <% if @over_five %>
+    <%= link_to 'Show Previous', '?m=all' %>
+    <% end %>
+
+    <% @messages.each do |message| %>
+    <% if message.body %>
+    <% user = User.find(message.user_id) %>
+    <div class="messenger-box rounded-corner">
+    <div class="header bold capitalize"><%= user.username %></div>
+    <div class="timestamp"><%= message.message_time %></div>
+    <%= message.body %>
+    </div>
+    <% end %>
+    <% end %>
+
+
+
+
+
+    <%= form_for [@conversation, @message], html: {class: "ui reply form"} do |f| %>
+    <div class="field"><%= f.text_area :body, class: "form-control rounded-corner" %></div>
+    <div><%= f.text_field :user_id, value: current_user.id, type: "hidden" %></div>
+    <div><%= f.submit "Add Reply", class: "btn waves-effect waves-light teal lighten-1 rounded-corner" %></div>
+    <% end %>
+  </div>
 </div>
-<%= f.text_field :user_id, value: current_user.id, type: "hidden" %>
-<div>
-  <%= f.submit "Add Reply", class: "ui blue labeled submit icon button" %>
-</div>
-<% end %>
