--- a/app/views/pages/admin_dashboard.html.erb
+++ b/app/views/pages/admin_dashboard.html.erb
@@ -1,59 +1,63 @@
+<div class="container">
+  <div class="row">
+    <h5>All Ticks</h5>
 
-<h5>All Ticks</h5>
+     <table>
+       <thead>
+         <tr>
+           <th>Common name</th>
+           <th>Scientific name</th>
+           <th>Host species</th>
+           <th>Latitude</th>
+           <th>Longtitude</th>
+           <th colspan="3"></th>
+         </tr>
+       </thead>
 
- <table>
-   <thead>
-     <tr>
-       <th>Common name</th>
-       <th>Scientific name</th>
-       <th>Host species</th>
-       <th>Latitude</th>
-       <th>Longtitude</th>
-       <th colspan="3"></th>
-     </tr>
-   </thead>
+      <tbody>
+         <% @ticks.each do |tick| %>
+           <tr>
+             <td><%= tick.common_name %></td>
+             <td><%= tick.scientific_name %></td>
+             <td><%= tick.host_species %></td>
+             <td><%= tick.latitude %></td>
+             <td><%= tick.longtitude %></td>
+             <td><%= link_to 'Show', tick %></td>
+             <td><%= link_to 'Edit', edit_tick_path(tick) %></td>
+             <td><%= link_to 'Destroy', tick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+           </tr>
+         <% end %>
+       </tbody>
+     </table>
+  </div>
+  <div class="row">
 
-  <tbody>
-     <% @ticks.each do |tick| %>
-       <tr>
-         <td><%= tick.common_name %></td>
-         <td><%= tick.scientific_name %></td>
-         <td><%= tick.host_species %></td>
-         <td><%= tick.latitude %></td>
-         <td><%= tick.longtitude %></td>
-         <td><%= link_to 'Show', tick %></td>
-         <td><%= link_to 'Edit', edit_tick_path(tick) %></td>
-         <td><%= link_to 'Destroy', tick, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-       </tr>
-     <% end %>
-   </tbody>
- </table>
+    <h5>All Posts</h5>
 
+    <table>
+      <thead>
+        <tr>
+          <th>User</th>
+          <th>Host species</th>
+          <th>Description</th>
+          <th>Location</th>
+         <th colspan="3"></th>
+        </tr>
+      </thead>
 
-<h5>All Posts</h5>
-
-<table>
-  <thead>
-    <tr>
-      <th>User</th>
-      <th>Host species</th>
-      <th>Description</th>
-      <th>Location</th>
-     <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @posts.each do |post| %>
-      <tr>
-        <td><%= post.user.username %></td>
-        <td><%= post.host_species %></td>
-        <td><%= post.description %></td>
-        <td><%= post.address %></td>
-        <td><%= link_to 'Show', post %></td>
-        <td><%= link_to 'Edit', edit_post_path(post) %></td>
-        <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+      <tbody>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= post.user.username %></td>
+            <td><%= post.host_species %></td>
+            <td><%= post.description %></td>
+            <td><%= post.address %></td>
+            <td><%= link_to 'Show', post %></td>
+            <td><%= link_to 'Edit', edit_post_path(post) %></td>
+            <td><%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+  </div>
+</div>
