--- a/app/views/partials/_nav.html.erb
+++ b/app/views/partials/_nav.html.erb
@@ -1,8 +1,8 @@
 <!-- start of navbar -->
 
-<nav>
+<nav class="white">
   <div class="nav-wrapper">
-    <a href="#!" class="brand-logo">Ticked</a>
+    <a href='/' class="brand-logo"><img src="https://image.ibb.co/gsTD1Q/ticked.png"></a>
     <a href="" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
     <ul class="right hide-on-med-and-down">
       <% if user_signed_in? %>
