--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,50 +1,53 @@
-<p id="notice"><%= notice %></p>
+<div class="container">
 
-<h3 class="block-display">New Sighting</h3>
-<a href=/posts/new class="btn-floating btn-medium waves-effect waves-light red flotation-right">
-    <i class="material-icons">add</i>
-</a>
-<p>
-    Forum to discuss new sightings and related questions regarding ticks with the community.
-</p>
+  <p id="notice"><%= notice %></p>
 
-<% @posts.each do |post| %>
-<div class="col s12 m7">
-      <div class="card horizontal">
-          <div class="card-image">
-            <% if post.post_image[0] %>
-           <%= image_tag(post.post_image[0].url) %><br>
-           <% else %>
-             <%= image_tag('tick-icon.png') %>
-           <% end %>
-          </div>
-          <div class="card-stacked">
-              <div class="card-content">
-                  <p>
-                      <strong>Host Species:</strong>
-                      <%= post.host_species %></p>
-                  <p>
-                      <strong>Description:</strong>
-                      <%= post.description %></p>
-                  <p>
-                    <strong>Location:</strong>
-                    <%= post.address %></p>
+  <h3 class="block-display">New Sighting</h3>
+  <a href=/posts/new class="btn-floating btn-medium waves-effect waves-light red flotation-right">
+      <i class="material-icons">add</i>
+  </a>
+  <p>
+      Forum to discuss new sightings and related questions regarding ticks with the community.
+  </p>
 
-              </br>
-              <%= link_to 'Show', post %>
-              <% if current_user.admin? || post.user_id == current_user.id %>
-              |<%= link_to 'Edit', edit_post_path(post) %>
-              |<%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+  <% @posts.each do |post| %>
+  <div class="col s12 m7">
+        <div class="card horizontal">
+            <div class="card-image">
+              <% if post.post_image[0] %>
+             <%= image_tag(post.post_image[0].url) %><br>
+             <% else %>
+               <%= image_tag('tick-icon.png') %>
+             <% end %>
+            </div>
+            <div class="card-stacked">
+                <div class="card-content">
+                    <p>
+                        <strong>Host Species:</strong>
+                        <%= post.host_species %></p>
+                    <p>
+                        <strong>Description:</strong>
+                        <%= post.description %></p>
+                    <p>
+                      <strong>Location:</strong>
+                      <%= post.address %></p>
 
-              <% end %>
-          </div>
-          <div class="card-action">
-              <strong>Posted by:</strong>
-              <a href="/conversations" class="capitalize"><%= post.user.username %></a>
-          </div>
+                </br>
+                <%= link_to 'Show', post %>
+                <% if current_user.admin? || post.user_id == current_user.id %>
+                |<%= link_to 'Edit', edit_post_path(post) %>
+                |<%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
+
+                <% end %>
+            </div>
+            <div class="card-action">
+                <strong>Posted by:</strong>
+                <a href="/conversations" class="capitalize"><%= post.user.username %></a>
+            </div>
 
 
-      </div>
+        </div>
+    </div>
+  <% end %>
   </div>
-<% end %>
 </div>
