--- a/app/views/ticks/_form.html.erb
+++ b/app/views/ticks/_form.html.erb
@@ -1,122 +1,125 @@
 <%= javascript_include_tag ('locationpicker.jquery.min.js') %>
 
-<%= form_for(tick) do |f| %>
-  <% if tick.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(tick.errors.count, "error") %> prohibited this tick from being saved:</h2>
+<div class="container">
 
-      <ul>
-      <% tick.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+  <%= form_for(tick) do |f| %>
+    <% if tick.errors.any? %>
+      <div id="error_explanation">
+        <p><%= pluralize(tick.errors.count, "error") %> prohibited this tick from being saved:</p>
+
+        <ul>
+        <% tick.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+        </ul>
+      </div>
+    <% end %>
+
+    <div class = "field">
+      <%= f.label :pictures %><br>
+      <%= f.file_field :tick_image, multiple: true %>
+    </div>
+
+    <div class="field">
+      <%= f.label :common_name %>
+      <%= f.text_field :common_name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :scientific_name %>
+      <%= f.text_field :scientific_name %>
+    </div>
+
+    <div class="field">
+      <%= f.label :host_species %>
+      <%= f.text_field :host_species %>
+    </div>
+
+    <div class="field">
+      <%= f.label :common_parasites %>
+      <%= f.text_field :common_parasites %>
+    </div>
+
+    <div class="field">
+      <%= f.label :pathogenic_effect %>
+      <%= f.text_field :pathogenic_effect %>
+    </div>
+
+    <div class="field">
+      <%= f.label :morphology %>
+      <%= f.text_field :morphology %>
+    </div>
+
+    <div class="field">
+      <%= f.label :description %>
+      <%= f.text_field :description %>
+    </div>
+
+    <div class="field">
+      <%= f.label :control_measures %>
+      <%= f.text_field :control_measures %>
+    </div>
+
+    <div class="field">
+      <%= f.label :latitude %>
+      <%= f.text_field :latitude %>
+    </div>
+
+    <div class="field">
+      <%= f.label :longtitude %>
+      <%= f.text_field :longtitude %>
+    </div>
+
+    <div class="field">
+      <%= f.label :address %><br>
+      <input type="text" id="address" style="width: 300px"/>
+    </div>
+
+    <div id="somecomponent" style="width: 100%; height: 400px;"></div>
+
+  <script>
+    $( document ).on('turbolinks:load', function() {
+  })
+        $('#somecomponent').locationpicker(
+          {
+      location: {
+          latitude: -33.865143,
+          longitude: 151.209900,
+        },
+        locationName: "",
+        radius: 500,
+        zoom: 5,
+        mapTypeId: google.maps.MapTypeId.ROADMAP,
+        styles: [],
+        mapOptions: {},
+        scrollwheel: true,
+        inputBinding: {
+            latitudeInput: $('#tick_latitude'),
+            longitudeInput: $('#tick_longtitude'),
+            radiusInput: null,
+            locationNameInput: $('#address')
+        },
+        enableAutocomplete: true,
+        enableAutocompleteBlur: true,
+        autocompleteOptions: true,
+        addressFormat: 'postal_code',
+        enableReverseGeocode: true,
+        draggable: true,
+        onchanged: function(currentLocation, radius, isMarkerDropped) {},
+        onlocationnotfound: function(locationName) {},
+        oninitialized: function (component) {},
+        // must be undefined to use the default gMaps marker
+        markerIcon: undefined,
+        markerDraggable: true,
+        markerVisible : true
+    }
+
+        );
+
+    </script> </br>
+
+    <div class="actions">
+      <%= f.submit %>
     </div>
   <% end %>
-
-  <div class = "field">
-    <%= f.label :pictures %><br>
-    <%= f.file_field :tick_image, multiple: true %>
-    </div>
-
-  <div class="field">
-    <%= f.label :common_name %>
-    <%= f.text_field :common_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :scientific_name %>
-    <%= f.text_field :scientific_name %>
-  </div>
-
-  <div class="field">
-    <%= f.label :host_species %>
-    <%= f.text_field :host_species %>
-  </div>
-
-  <div class="field">
-    <%= f.label :common_parasites %>
-    <%= f.text_field :common_parasites %>
-  </div>
-
-  <div class="field">
-    <%= f.label :pathogenic_effect %>
-    <%= f.text_field :pathogenic_effect %>
-  </div>
-
-  <div class="field">
-    <%= f.label :morphology %>
-    <%= f.text_field :morphology %>
-  </div>
-
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_field :description %>
-  </div>
-
-  <div class="field">
-    <%= f.label :control_measures %>
-    <%= f.text_field :control_measures %>
-  </div>
-
-  <div class="field">
-    <%= f.label :latitude %>
-    <%= f.text_field :latitude %>
-  </div>
-
-  <div class="field">
-    <%= f.label :longtitude %>
-    <%= f.text_field :longtitude %>
-  </div>
-
-  <div class="field">
-    <%= f.label :address %><br>
-    <input type="text" id="address" style="width: 300px"/>
-  </div>
-
-  <div id="somecomponent" style="width: 100%; height: 400px;"></div>
-
-<script>
-  $( document ).on('turbolinks:load', function() {
-})
-      $('#somecomponent').locationpicker(
-        {
-    location: {
-        latitude: -33.865143,
-        longitude: 151.209900,
-      },
-      locationName: "",
-      radius: 500,
-      zoom: 5,
-      mapTypeId: google.maps.MapTypeId.ROADMAP,
-      styles: [],
-      mapOptions: {},
-      scrollwheel: true,
-      inputBinding: {
-          latitudeInput: $('#tick_latitude'),
-          longitudeInput: $('#tick_longtitude'),
-          radiusInput: null,
-          locationNameInput: $('#address')
-      },
-      enableAutocomplete: true,
-      enableAutocompleteBlur: true,
-      autocompleteOptions: true,
-      addressFormat: 'postal_code',
-      enableReverseGeocode: true,
-      draggable: true,
-      onchanged: function(currentLocation, radius, isMarkerDropped) {},
-      onlocationnotfound: function(locationName) {},
-      oninitialized: function (component) {},
-      // must be undefined to use the default gMaps marker
-      markerIcon: undefined,
-      markerDraggable: true,
-      markerVisible : true
-  }
-
-      );
-
-  </script> </br>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+</div>
