--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -149,7 +149,7 @@ color: #394261;
 
 #about {
   /* The image used */
-  background-image: url(cattle.jpg);
+  background-image: url(https://image.ibb.co/fsTurQ/cattle.jpg);
   background-position: 50%;
 
 }
