--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <h3>Distribution of Ticks</h3>
-  
-  <div class="row" id="map" style='width: 100%; height: 400px;'>
+</div>
+
+<div class="container" id="map" style='width: 100%; height: 350px;'>
   <%= render 'map', tick: @tick %>
-  </div>
 </div>
