--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,5 +1,6 @@
 <%= javascript_include_tag ('locationpicker.jquery.min.js') %>
 
+
 <div class="container">
 
   <%= form_for(post) do |f| %>
@@ -32,7 +33,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :address, "Location" %>
+      <%= f.label :address %>
       <%= f.text_field :address %>
     </div>
 
@@ -48,7 +49,7 @@
 
 
 
-    <div class="actions">
+    <div class="actions btn waves-effect waves-light teal lighten-1 rounded-corner">
       <%= f.submit %>
     </div>
   <% end %>
