fixed text area

--- a/app/views/ticks/_form.html.erb
+++ b/app/views/ticks/_form.html.erb
@@ -37,27 +37,27 @@
 
     <div class="field">
       <%= f.label :common_parasites %>
-      <%= f.text_field :common_parasites %>
+      <%= f.text_area :common_parasites, :id => "textarea1", :class => "materialize-textarea"%>
     </div>
 
     <div class="field">
       <%= f.label :pathogenic_effect %>
-      <%= f.text_field :pathogenic_effect %>
+      <%= f.text_area :pathogenic_effect, :id => "textarea1", :class => "materialize-textarea"%>
     </div>
 
     <div class="field">
       <%= f.label :morphology %>
-      <%= f.text_field :morphology %>
+      <%= f.text_area :morphology, :id => "textarea1", :class => "materialize-textarea"%>
     </div>
 
     <div class="field">
       <%= f.label :description %>
-      <%= f.text_field :description %>
+      <%= f.text_area :description, :id => "textarea1", :class => "materialize-textarea"%>
     </div>
 
     <div class="field">
       <%= f.label :control_measures %>
-      <%= f.text_field :control_measures %>
+      <%= f.text_area :control_measures, :id => "textarea1", :class => "materialize-textarea"%>
     </div>
 
     <div class="field">
