fixed mobile view

--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,3 +1,4 @@
+
 <div class="container">
   <div class="row top-margin">
     <div class="capitalize center">
@@ -14,8 +15,8 @@
 </div>
 
 
-<div class="container">
-  <div class="row chat-box">
+<div class="row">
+  <div class="container chat-box">
     <% if @over_five %>
     <%= link_to 'Show Previous', '?m=all' %>
     <% end %>
