--- a/app/views/partials/_footer.html.erb
+++ b/app/views/partials/_footer.html.erb
@@ -22,8 +22,9 @@
       </div>
     </div>
   </div>
+
   <div class="footer-copyright">
-    <div class="container center small-text">
+    <div class="row center small-text">
     Logo by <a class="white-text" href="http://www.flaticon.com/authors/freepik">Freepik</a> from <a class="white-text" href="http://www.flaticon.com/">Flaticon</a> is licensed under <a class="white-text" href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0">CC BY 3.0</a>. Made with <a class="white-text" href="http://logomakr.com" title="Logo Maker">Logo Maker</a>
     </div>
   </div>
