--- a/app/views/pages/geomap.html.erb
+++ b/app/views/pages/geomap.html.erb
@@ -1,7 +1,8 @@
 <div class="container">
   <h3>Distribution of Ticks</h3>
-</div>
-
-<div class="container" id="map" style='width: 100%; height: 350px;'>
-  <%= render 'map', tick: @tick %>
+  <div class="row">
+    <div class="container" id="map" style='width: 100%; height: 350px;'>
+    <%= render 'map', tick: @tick %>
+    </div>
+  </div>
 </div>
