--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,17 +1,16 @@
 <div class="container">
-
   <p id="notice"><%= notice %></p>
 
-  <h3 class="block-display">New Sighting</h3>
-  <a href=/posts/new class="btn-floating btn-medium waves-effect waves-light red flotation-right">
-      <i class="material-icons">add</i>
-  </a>
-  <p>
-      Forum to discuss new sightings and related questions regarding ticks with the community.
-  </p>
+  <div class="row">
+    <h3 class="block-display">New Sighting</h3>
+    <a href=/posts/new class="btn-floating btn-medium waves-effect waves-light red flotation-right"><i class="material-icons">add</i></a>
+    <p>Forum to discuss new sightings and related questions regarding ticks with the community.</p>
+</div>
 
+
+  <div class="row">
   <% @posts.each do |post| %>
-  <div class="col s12 m7">
+  <div class="col s12 m12 l12">
         <div class="card horizontal">
             <div class="card-image">
               <% if post.post_image[0] %>
@@ -22,32 +21,29 @@
             </div>
             <div class="card-stacked">
                 <div class="card-content">
-                    <p>
-                        <strong>Host Species:</strong>
-                        <%= post.host_species %></p>
-                    <p>
-                        <strong>Description:</strong>
-                        <%= post.description %></p>
-                    <p>
-                      <strong>Location:</strong>
-                      <%= post.address %></p>
+                    <p><strong>Host Species:</strong><%= post.host_species %></p>
+                    <p><strong>Description:</strong><%= post.description %></p>
+                    <p><strong>Location:</strong><%= post.address %></p>
 
                 </br>
                 <%= link_to 'Show', post %>
                 <% if current_user.admin? || post.user_id == current_user.id %>
                 |<%= link_to 'Edit', edit_post_path(post) %>
                 |<%= link_to 'Delete', post_path(post), method: :delete, data: { confirm: 'Are you sure?' } %>
-
                 <% end %>
             </div>
+
+
             <div class="card-action">
                 <strong>Posted by:</strong>
                 <a href="/conversations" class="capitalize"><%= post.user.username %></a>
             </div>
 
+          </div>
+
 
         </div>
     </div>
-  <% end %>
+    <% end %>
   </div>
 </div>
