--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -49,10 +49,13 @@
       <%= f.text_field :address %>
     </div>
 
+<div class="row">
 
     <div class="actions btn waves-effect waves-light teal lighten-1 rounded-corner">
       <%= f.submit %>
     </div>
+
+  </div>
   <% end %>
 
 </div>
