--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,6 +1,10 @@
+<div class="container">
+
 <h3>Edit Post</h3>
+
+</div>
 
 <%= render 'form', post: @post %>
 
-<%= link_to 'Show', @post %> |
-<%= link_to 'Back', posts_path %>
+<%#= link_to 'Show', @post %>
+<%#= link_to 'Back', posts_path %>
