--- a/app/views/ticks/_form.html.erb
+++ b/app/views/ticks/_form.html.erb
@@ -117,9 +117,12 @@
         );
 
     </script> </br>
+<div class="row">
 
     <div class="actions btn waves-effect waves-light teal lighten-1 rounded-corner">
       <%= f.submit %>
     </div>
+
+  </div>
   <% end %>
 </div>
