--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -5,7 +5,7 @@
 
   <p>
     <% @post.post_image.each do |image| %>
-      <img src="<%= image.url %>">
+      <img src="<%= image.url %>" class="img-thumbnail">
     <% end %>
   </p>
 
@@ -24,12 +24,10 @@
     <%= @post.address %>
   </p>
 
-
-  <% if current_user.admin? || @post.user_id == current_user.id %>
-  <%= link_to 'Edit', edit_post_path(@post) %>
-  |<%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
-
-  <% end %>
+    <% if current_user.admin? || @post.user_id == current_user.id %>
+    <%= link_to 'Edit', edit_post_path(@post) %>
+    <%= link_to 'Delete', @post, method: :delete, data: { confirm: 'Are you sure?' } %>
+    <% end %>
 
   <%= render 'partials/message' %>
 </div>
