--- a/app/views/ticks/edit.html.erb
+++ b/app/views/ticks/edit.html.erb
@@ -1,6 +1,8 @@
+<div class="container">
 <h3>Editing Tick</h3>
+</div>
 
 <%= render 'form', tick: @tick %>
 
-<%= link_to 'Show', @tick %> |
-<%= link_to 'Back', ticks_path %>
+<%#= link_to 'Show', @tick %>
+<%#= link_to 'Back', ticks_path %>
