--- a/app/views/ticks/index.html.erb
+++ b/app/views/ticks/index.html.erb
@@ -27,11 +27,13 @@
     <div class="col s12 m12 l12">
       <div class="card horizontal">
         <div class="card-image">
-          <% if tick.tick_image[0] %>
-          <%= image_tag(tick.tick_image[0].url) %><br>
-          <% else %>
-          <%= image_tag('tick-icon.png') %>
-          <% end %>
+          <figure class="img-thumbnail">
+            <% if tick.tick_image[0] %>
+            <%= image_tag(tick.tick_image[0].url) %><br>
+            <% else %>
+            <%= image_tag('tick-icon.png') %>
+            <% end %>
+          </figure>
         </div>
 
         <div class="card-stacked">
@@ -45,7 +47,7 @@
             <p><strong>Description:</strong><%= tick.description %></p>
             <p><strong>Control measures:</strong><%= tick.control_measures %></p>
           </br>
-            <%= link_to 'Find out more', tick %>
+            <%= link_to 'Read more', tick %>
             <% if current_user.admin? %>
             |<%= link_to 'Edit', edit_tick_path(tick)%>
             |<%= link_to 'Delete', tick, method: :delete, data: { confirm: 'Are you sure?' } %>
